<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.laessker.jonathan.airhockey.SettingsMenu">

    <Switch
        android:text="@string/music_effects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/switch_effects" />

    <Switch
        android:text="@string/music_soundtrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_effects"
        android:layout_alignStart="@+id/switch_effects"
        android:layout_marginTop="32dp"
        android:id="@+id/switch_soundtrack" />

    <Button
        android:text="@string/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_difficulty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:background="@drawable/oval"
        android:id="@+id/button" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/spinner_difficulty"
        android:entries="@array/difficulty_levels"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/textView"
        android:layout_below="@+id/switch_soundtrack"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/textView4" />
</RelativeLayout>
